Version=1.2.1018
 - Kalibrierdaten werden in einer Variablen gespeichert
 - andere Stromzaehler werden unterstuetzt
Version=1.2.1017
 - Mysql: Geraetegruppe wird mit abgespeichert
 - css-File fuer eigene Webfrontgestaltung
 - Changelog-Anzeige in der Versionsanzeige
 - Mysql: Logadresse mit in Tabelle Gesamt
 - alternativer Button fuer PlugwiseTab moeglich
 - automatische Benachrichtigung bei neuen Updates
 