@@ -1,4 +1,4 @@
-Version=1.2.1020
+Version=1.2.1021
 ModuleNamespace=IPSLibrary::app::hardware::Plugwise
 
 [App]
@@ -34,8 +34,9 @@ ScriptFiles[]=\Default\Plugwise.css
 ScriptFiles[]=Changelog.txt
 ScriptFiles[]=tabPlugwiseNormal.png
 ScriptFiles[]=tabPlugwiseRed.png
-
-
+ScriptFiles[]=leer.png
+ScriptFiles[]=blitz.png
+ScriptFiles[]=blitz2.png
 
 
 
